# IL2232

./: CMakeLists.txt  FunctionDefineSwitch.h  README.md  RLevaluation.py  RLtrain_new.py  Run.py  interfaceCPP.cpp  interfaceCPP.hpp  interfacePy.py  main.cpp  parameters.hpp  plotgraph.py  printfSW.hpp  rltrain.py  yzreadme.md
AXI4/: AXI4Signal.cpp  AXI4Signal.hpp  BasicNI.cpp  BasicNI.hpp  Converter.cpp  Converter.hpp  Converter_Master.cpp  Converter_Master.hpp  MasterNI.cpp  MasterNI.hpp  MasterPort.cpp  MasterPort.hpp  Message.cpp  Message.hpp  SlaveNI.cpp  SlaveNI.hpp  SlavePort.cpp  SlavePort.hpp  SlavePortInMasterNI.cpp  SlavePortInMasterNI.h
ComplexTrafficControl/: TrafficController.cpp  TrafficController.hpp  TrafficGenerator.cpp  TrafficGenerator.hpp
RecordFiles/: LCS_URS_delay.py  OnlyURStransLevel_delay_20230118.py  py_learn.py  show_OneRouterOutportVarying.py  transLevel_delay_eldThan20230118.py
RecordFiles/RL_RecordFiles/readFiles/: randValueFromTxt.txt  readActionFromTxt.txt
RecordFiles/RL_RecordFiles/reward/: YZRefInjPeriod.txt  epoch_0refDelayPeriod.txt
TDM/: Block.cpp  Block.hpp  BlockBuffer.cpp  BlockBuffer.hpp  Signal.cpp  Signal.hpp  TInPort.cpp  TInPort.hpp  TLink.cpp  TLink.hpp  TNI.cpp  TNI.hpp  TNetwork.cpp  TNetwork.hpp  TOutPort.cpp  TOutPort.hpp  TRouter.cpp  TRouter.hpp
VC/: Flit.cpp  Flit.hpp  FlitBuffer.cpp  FlitBuffer.hpp  Link.cpp  Link.hpp  NI.cpp  NI.hpp  NRBase.cpp  NRBase.hpp  Packet.cpp  Packet.hpp  PacketBuffer.cpp  PacketBuffer.hpp  Port.cpp  Port.hpp  RInPort.cpp  RInPort.hpp  ROutPort.cpp  ROutPort.hpp  VCNI_MMP.cpp  VCNI_MMP.h  VCNetwork.cpp  VCNetwork.hpp  VCRouter.cpp  VCRouter.hpp
copy_4/file_128/: ReadMe  table_ni.txt  table_router.txt  traffic_mode.txt
copy_4/file_32/: console  table_ni.txt  table_router.txt  traffic_mode.txt
copy_4/file_64/: Untitled Document  console  destination.txt  table_ni.txt  table_router.txt  traffic_mode.txt
file/: console  table_router.txt
file_64/: table_ni.txt  traffic_mode.txt
(+12 files in other folders)
